# DiscordToolbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  discord_toolbox
inc/: Config.hpp
src/: Config.cpp  main.cpp
